# eigenface

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
dokumentaatio/: määrittelydokumentti.md  testausraportti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikko1.md  viikko2  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
src/: index.py  matriisilaskin.py
src/tests/: matriisilaskin_test.py  qr_algoritmi_test.py
