[tool.poetry]
name = "eigenface"
version = "0.1.0"
description = ""
authors = ["Sebastian Beijar <sebastian.beijar@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
numpy = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
